...
                            android:text="Name"
                            android:textColor="@color/_bg__profile_ek1_color"
                            android:textSize="16.02sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/name_input"
                            android:layout_width="335.37dp"
                            android:layout_height="48.05dp"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="29dp"
                            android:alpha="1000"
                            android:background="@drawable/boundary_style"
...
                            android:text="Phone Number"
                            android:textColor="@color/_bg__profile_ek1_color"
                            android:textSize="16.02sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/phone_input"
                            android:layout_width="335.37dp"
                            android:layout_height="48.05dp"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="29dp"
                            android:alpha="100"
                            android:background="@drawable/boundary_style"
...
                            android:text="Email (optional)"
                            android:textColor="@color/_bg__profile_ek1_color"
                            android:textSize="16.02sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/email_input"
                            android:layout_width="335.37dp"
                            android:layout_height="48.05dp"
                            android:layout_marginStart="0dp"
                            android:layout_marginTop="29dp"
                            android:alpha="100"
                            android:background="@drawable/boundary_style"
...

                    </RelativeLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/save_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="86dp"
                    android:layout_marginTop="650dp"
                    android:gravity="center">
                    <View
...
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"/>
                </RelativeLayout>


                <CheckBox
                    android:id="@+id/enable_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="500dp"
                    android:layout_marginEnd="13dp"
                    android:layout_marginBottom="13dp"
...
                    android:textStyle="bold" />


            </RelativeLayout>

            <CheckBox
                android:id="@+id/enable_location"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="550dp"
                android:layout_marginEnd="13dp"
                android:layout_marginBottom="13dp"
...
